# t-rex

./: .gitignore  Pipfile  README.md  api_types.py  booklet.py  config.toml  config_schema.json  helpers.py  index.md  main.py  package-lock.json  package.json  process.py  pyproject.toml  template.csv
.github/: dependabot.yml
.github/workflows/: deploy.yml
events/: (for booklet) final final - Sheet1.csv  (for booklet) final final - Sheet1.xlsx  2023-events.csv  2024-events.csv  2025-events.csv  2026-events.csv  REX Testing events - Sheet1 (2).csv  REX Testing events - Sheet1 (4).csv  [for booklet] final final - Sheet1.csv  [for booklet] final final - part2.csv  [for testing] REX events - Sheet1.csv  dev_testing.csv  orientation.csv
process/: __main__.py  api_types.py  booklet.py  helpers.py
static/: guide-bw.css  openapi.yaml
static/archive/: 2022.html  2023.html  2024.html  2025.html
static/assets/: guide-bw.css
templates/: credit.html  errors.html  errors.md  guide.html  guide_fm.html  helpers.html  index.html  index.md  main.tex  openapi.yaml  template.html
