[project]
name = "t-rex"
version = "2025.0.0"
description = "A Python project that generates a structured format for REX events and an HTML file that can get converted into a booklet"
authors = [
    { name = "Cameron Kleiman", email = "ckleiman@mit.edu" },
    { name = "DormCon Tech Chair", email = "dormcon-tech-chair@mit.edu" },
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Jinja2 >=3.1.6",
    "markdown >=3.10",
    "tzdata >=2025.3",
    "pydantic >=2.12.5",
    "pydantic-extra-types >=2.10.6",
    "openapi-pydantic >=0.5.1",
    "email-validator >=2.3.0",
    "PyYaml >=6.0.3",
]

[dependency-groups]
dev = ["ruff >=0.14.10", "djlint >=1.36.4"]

[tool.djlint]
profile = "jinja"
use_gitignore = true
